--- a/portfolio_a/styles/Layout.module.css
+++ b/portfolio_a/styles/Layout.module.css
@@ -1,49 +1,81 @@
 .container {
-    display: flex;
-    height: 100vh;
-  }
-  
-  .leftHalf, .rightHalf {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .leftHalf {
-    background-color: #070707;
-    padding: 10px;
-    position: relative;
-  }
-  
-  .rightHalf {
-    background-color: #000000;
-    margin: 10px;
-    border-top: 2px solid #070707;
-    border-left: 2px solid #070707;
-    border-right: 2px solid #070707;
-    position: relative;
-  }
-  
-  .alias {
-    position: absolute;
-    top: 1rem;
-    left: 1rem;
-    font-size: 1.2rem;
-    font-weight: bold;
-  }
-  
-  .content {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: opacity 0.3s ease;
-  }
-  
-  .photo {
-    height: 70%;
-    background-image: url('../Images/Profile.jpg');
-    background-size: cover;
-    background-position: center;
-    margin-top: auto;
-  }
+  display: flex;
+  height: 100vh;
+}
+
+.leftHalf, .rightHalf {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+}
+
+.leftHalf {
+  background-color: #070707;
+  padding: 10px;
+  position: relative;
+}
+
+.rightHalf {
+  background-color: #000000;
+  border-top: 2px solid #070707;
+  border-left: 2px solid #070707;
+  border-right: 2px solid #070707;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.alias {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.content {
+  flex: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.3s ease;
+}
+
+.profile {
+  border-top: 3px solid #070707;
+  border-left: 3px solid #070707;
+  border-right: 3px solid #070707;
+  padding: 20px;
+  margin: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-shrink: 0;
+  height:80%;
+  width: 80%;
+}
+
+.photo {
+  height: 100%;
+  width: 50%;
+  background-image: url('../Images/Profile.jpg');
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  border: 2px solid #000000;
+}
+
+.title {
+  text-align: center;
+}
+
+.name {
+  font-size: 2rem;
+  margin-bottom: 0.5rem;
+}
+
+.introduction {
+  font-size: 1.2rem;
+  margin-bottom: 0;
+}
