--- a/portfolio_a/styles/Home.module.css
+++ b/portfolio_a/styles/Home.module.css
@@ -3,15 +3,30 @@
   color: #ffffff;
 }
 
+.quoteIconLeft{
+  font-size: 4rem;
+  color: #444343;
+  text-align: left;
+  margin-left: -80%;
+  margin-bottom: 1rem;
+}
+
+.quoteIconRight{
+  font-size: 4rem;
+  color: #444343;
+  text-align: right;
+  margin-right: -80%;
+}
+
 .motivationalStatement {
-  font-size: 2.5rem;
+  font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  color: #444343;
 }
 
 .name {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
 }
 
 .introduction {
