--- a/portfolio_a/styles/Navigation.module.css
+++ b/portfolio_a/styles/Navigation.module.css
@@ -20,7 +20,7 @@
     border: none;
     cursor: pointer;
     font-size: 1rem;
-    color: #ffffff;
+    color: #848383;
     transition: color 0.3s ease;
     padding: 0.5rem;
     width: 100%;
@@ -28,5 +28,8 @@
   
   .navLink:hover,
   .navLink.active {
-    color: #0070f3;
+    color: #ffffff;
+    font-weight: bold;
+    font-size: 1rem;
+    transition: 500ms;
   }
