Home element styling and animation update

--- a/portfolio_a/styles/About.module.css
+++ b/portfolio_a/styles/About.module.css
@@ -28,7 +28,7 @@
     display: inline-block;
     width: 2px;
     height: 1.2em;
-    background-color: #ffffff;
+    background-color: #848383;
     margin-left: 3px;
     animation: blink 0.5s infinite;
     position: relative;
