--- a/portfolio_a/styles/Navigation.module.css
+++ b/portfolio_a/styles/Navigation.module.css
@@ -28,7 +28,7 @@
   
   .navLink:hover,
   .navLink.active {
-    color: #ffffff;
+    color: #040D12;
     font-weight: bold;
     font-size: 1rem;
     transition: 500ms;
