--- a/portfolio_a/styles/Links.module.css
+++ b/portfolio_a/styles/Links.module.css
@@ -30,6 +30,7 @@
   }
 
   .icon:hover {
+    transform: rotate(360deg);
     color: #000000;
   }
   
@@ -76,15 +77,17 @@
   }
   
   .peerLinks a {
-    margin: 0 1rem;
-    color: #848383;
+    color: #848383; /* Default color */
+    margin: 1rem;
     text-decoration: none;
-    font-size: 1rem;
+    font-weight: normal; /* Default font weight */
+    transform: scale(1); /* Default scale */
+    transition: transform 0.3s ease, color 0.3s ease; /* Smooth transition for both transform and color */
   }
   
   .peerLinks a:hover {
     color: #000000;
     font-weight: bold;
-    transform: scale(1.5);
-    transition: transform 0.3s ease, color 0.3s ease;
+    transform: scale(1.5); /* Scale up on hover */
   }
+  
