--- a/portfolio_a/styles/Home.module.css
+++ b/portfolio_a/styles/Home.module.css
@@ -3,7 +3,7 @@
   color: #ffffff;
 }
 
-.quoteIconLeft{
+.quoteIconLeft {
   font-size: 4rem;
   color: #444343;
   text-align: left;
@@ -11,7 +11,7 @@
   margin-bottom: 1rem;
 }
 
-.quoteIconRight{
+.quoteIconRight {
   font-size: 4rem;
   color: #444343;
   text-align: right;
@@ -22,7 +22,8 @@
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
-  min-height: 3.5rem; /* Prevents layout shift as text is typed */
+  min-height: 3.5rem;
+  /* Prevents layout shift as text is typed */
   position: relative;
   color: #848383;
   padding-left: 30px;
@@ -45,9 +46,11 @@
   0% {
     opacity: 0;
   }
+
   50% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
   }
