--- a/portfolio_a/styles/Layout.module.css
+++ b/portfolio_a/styles/Layout.module.css
@@ -4,7 +4,8 @@
   background-color: #000000;
 }
 
-.leftHalf, .rightHalf {
+.leftHalf,
+.rightHalf {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -26,8 +27,10 @@
 }
 
 .avatar {
-  width: 1.5rem; /* Adjust size as needed */
-  height: 1.5rem; /* Adjust size as needed */
+  width: 1.5rem;
+  /* Adjust size as needed */
+  height: 1.5rem;
+  /* Adjust size as needed */
   background-image: url('../Images/avatar.jpg');
   background-size: cover;
   background-position: center;
@@ -37,7 +40,7 @@
   left: 5rem;
 }
 
-.avatar:hover{
+.avatar:hover {
   transform: rotate(360deg);
   transition: transform 0.5s ease;
 }
