--- a/portfolio_a/styles/WeatherWidget.module.css
+++ b/portfolio_a/styles/WeatherWidget.module.css
@@ -1,4 +1,3 @@
-/* styles/WeatherWidget.module.css */
 .weatherWidget {
     display: flex;
     align-items: center;
@@ -10,31 +9,31 @@
     font-size: 0.9rem;
     backdrop-filter: blur(5px);
     position: fixed;
-    bottom: 3rem; /* Distance from the bottom */
+    bottom: 3rem;
     left: 25%;
     transform: translateX(-50%);
-    z-index: 1000; /* Ensures it stays on top of other elements */
-  }
-  
-  .location {
+    z-index: 1000;
+}
+
+.location {
     font-weight: bold;
     color: #848383;
-  }
-  
-  .temperature {
+}
+
+.temperature {
     font-size: 1.2rem;
     margin: 0 10px;
     color: #848383;
-  }
-  
-  .condition {
+}
+
+.condition {
     display: flex;
     align-items: center;
     color: #848383;
-  }
-  
-  .condition img {
+}
+
+.condition img {
     width: 30px;
     height: 30px;
     margin-right: 5px;
-  }
+}
