--- a/portfolio_a/styles/Links.module.css
+++ b/portfolio_a/styles/Links.module.css
@@ -26,12 +26,11 @@
   color: #848383;
   opacity: 0;
   animation: fallIn 0.5s ease forwards;
-  transition: color 0.5s ease;
+  transition: color 1s ease;
 }
 
 .icon:hover {
-  transform: rotate(360deg);
-  color: #000000;
+  color: #0070f3;
 }
 
 @keyframes fallIn {
@@ -92,11 +91,10 @@
   text-decoration: none;
   font-weight: normal;
   transform: scale(1);
-  transition: transform 0.3s ease, color 0.3s ease;
+  transition: color 1s ease;
 }
 
 .peerLinks a:hover {
-  color: #000000;
+  color: #0070f3;
   font-weight: bold;
-  transform: scale(1.5);
 }
