--- a/portfolio_a/styles/Works.module.css
+++ b/portfolio_a/styles/Works.module.css
@@ -42,6 +42,7 @@
   background: rgba(0, 0, 0, 0.9);
   color: #848383;
   width: 100%;
+  border-radius: 20px;
   margin: 5px;
   padding: 10px;
   box-sizing: border-box;
