--- a/portfolio_a/styles/Layout.module.css
+++ b/portfolio_a/styles/Layout.module.css
@@ -105,3 +105,37 @@
   margin-bottom: 0;
   color: #848383;
 }
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .rightHalf {
+    order: 1;
+  }
+
+  .leftHalf {
+    order: 2;
+    margin: 0;
+  }
+
+  .avatar{
+    left: 2rem;
+    height: 3rem;
+    width: 3rem;
+    animation: rotate 1s linear infinite;
+  }
+  .alias{
+    display: none;
+  }
+
+  @keyframes rotate {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(360deg);
+    }
+  }
+}
