--- a/portfolio_a/styles/Layout.module.css
+++ b/portfolio_a/styles/Layout.module.css
@@ -94,7 +94,6 @@
 
 .name {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
   color: #848383;
 }
 
@@ -102,6 +101,10 @@
   font-size: 1.2rem;
   margin-bottom: 0;
   color: #848383;
+}
+
+.minialias{
+  display: none;
 }
 
 @media (max-width: 768px) {
@@ -119,10 +122,7 @@
   }
 
   .avatar{
-    left: 48%;
-    height: 3rem;
-    width: 3rem;
-    animation: rotate 2s linear infinite;
+    display: none;
   }
   .alias{
     display: none;
@@ -133,15 +133,14 @@
   }
 
   .introduction{
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 
-  @keyframes rotate {
-    from {
-      transform: rotate(0deg);
-    }
-    to {
-      transform: rotate(360deg);
-    }
+  .minialias{
+    display: block;
+    font-size: 0.8rem;
+    color: #848383;
+    margin-bottom: 0.5rem;
+    font-family: 'Courier New', Courier, monospace;
   }
 }
