--- a/portfolio_a/styles/Navigation.module.css
+++ b/portfolio_a/styles/Navigation.module.css
@@ -1,6 +1,6 @@
 .nav {
   width: 100%;
-  padding: 1rem 0;
+  top: 0;
 }
 
 .navList {
@@ -24,22 +24,54 @@
   transition: color 0.3s ease;
   padding: 0.5rem;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .navLink:hover,
 .navLink.active {
   color: #0070f3;
   font-weight: bold;
-  font-size: 1rem;
-  transition: 500ms;
 }
 
-@media (max-width: 600px) {
-  .navList {
-    margin-top: 3rem;
+.navIcon {
+  font-size: 1rem;
+  border: 2px solid #040D12;
+  padding: 1rem;
+  border-radius: 50%;
+  color: #314a58;
+  box-shadow: 0 -5px 4px rgba(0, 0, 0, 0.3);
+}
+
+.navText {
+  font-size: 0.9rem;
+  margin-top: 0.5rem;
+}
+
+@media (max-width: 767px) {
+  .nav {
+    bottom: 0;
+    top: auto;
+    position: fixed;
+    z-index: 10000;
+    background-color: #040D12;
+    box-shadow: 0 -5px 4px rgba(0, 0, 0, 0.3);
+    border-radius: 30px;
   }
 
-  .navItem {
-    margin-bottom: 1rem;
+  .navText {
+    display: none;
+  }
+
+  .navIcon:hover {
+    color: #0070f3;
+  }
+
+}
+
+@media (min-width: 768px) {
+  .navIcon {
+    display: none;
   }
 }
