--- a/portfolio_a/styles/Works.module.css
+++ b/portfolio_a/styles/Works.module.css
@@ -49,7 +49,8 @@
 }
 
 .cardContent:hover {
-  background: rgba(0, 0, 0, 0.9);;
+  background: rgba(0, 0, 0, 0.9);
+  ;
   border-radius: 20px;
 }
 
