--- a/portfolio_a/styles/WeatherWidget.module.css
+++ b/portfolio_a/styles/WeatherWidget.module.css
@@ -9,7 +9,7 @@
     font-size: 0.9rem;
     backdrop-filter: blur(5px);
     position: absolute;
-    bottom: 3rem;
+    bottom: 20%;
     left: 50%;
     transform: translateX(-50%);
     z-index: 1000;
